<resources>
    <string name="app_name">Gym Training</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_training">Create Training</string>
    <string name="title_activity_view_exercise">View exercises</string>
    <string name="ChangeExerciseDialogTitle">Change exercise</string>
    <string name="CreateExerciseDialogTitle">Create exercise</string>
    <string name="mainToast">Select a training or hold it to delete</string>
    <string name="viewExerciseMainToast">Select an exercise to change it</string>
    <string name="createTrainingMainToast">Select a exercise to delete it</string>
    <string name="addExercise">Add exercise</string>
    <string name="save">Save</string>
    <string name="newTraining">New Training</string>
    <string name="ok">Ok</string>
    <string name="cancel">cancel</string>
    <string name="insertTitle">Insert a title for this training</string>
    <string name="confirm">confirm</string>
    <string name="changeTraining">Change training</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="exercise">Exercise</string>
    <string name="quantity">Quantity</string>
    <string name="repetition">Repetition</string>
    <string name="changeExercise">Change exercise</string>
    <string name="addExerciseTitle">Add a new exercise</string>
    <string name="addTraining">Add Training</string>
    <string name="confirmation">confirmation</string>
    <string name="confirmationDeleteTraining">Do you want to delete this training?</string>
    <string name="confirmationDeleteExercise">Do you want to delete this exercise?</string>
    <string name="google_maps_api">AIzaSyAoRae26aW9cuZSnm8X5oTVcHHb9gftoA8</string>
</resources>
