<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingTop="@dimen/padding_top"
                >

    <TextView
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:text="@string/changeExercise"
        android:textSize="@dimen/text_size_h1"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text"
        android:gravity="center"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right"
        android:id="@+id/tableRow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repetition"
            android:layout_below="@+id/text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="20dp"
            android:textAlignment="center"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/alteRepetitionSpinner"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/text"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:entries="@array/repetitionSpinnerItems"
            android:textAlignment="center"
            android:layout_weight="1"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_below="@+id/tableRow"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right"
        android:id="@+id/tableRow2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:id="@+id/textView3"
            android:layout_below="@+id/text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="20dp"
            android:textAlignment="center"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/alterQuantitySpinner"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/text"
            android:layout_toRightOf="@+id/textView3"
            android:layout_toEndOf="@+id/textView3"
            android:entries="@array/quantitySpinnerItems"
            android:textAlignment="center"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_below="@+id/tableRow2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right"
        android:id="@+id/tableRow3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise"
            android:id="@+id/textView4"
            android:layout_below="@+id/text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="20dp"
            android:textAlignment="center"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/alterExerciseEditText"
            android:layout_weight="1"/>

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tableRow3"
        android:gravity="center"
        android:id="@+id/tableRow4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/save"
            android:id="@+id/alterUpdateExercise"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/alterDeleteExercise"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/alterCancel"
            android:layout_weight="1"/>
    </TableRow>

</RelativeLayout>