<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:text="@string/addExerciseTitle"
        android:textSize="@dimen/text_size_h1"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text"
        android:gravity="center"
        android:id="@+id/tableRow"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repetition"
            android:layout_below="@+id/text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="20dp"
            android:textAlignment="center"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/repetitionSpinner"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/text"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:entries="@array/repetitionSpinnerItems"
            android:textAlignment="center"
            android:layout_weight="1"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_below="@+id/tableRow"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tableRow2"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:id="@+id/textView3"
            android:layout_below="@+id/text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="20dp"
            android:textAlignment="center"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quantitySpinner"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/text"
            android:layout_toRightOf="@+id/textView3"
            android:layout_toEndOf="@+id/textView3"
            android:entries="@array/quantitySpinnerItems"
            android:textAlignment="center"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_below="@+id/tableRow2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tableRow3"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise"
            android:id="@+id/textView4"
            android:layout_below="@+id/text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="20dp"
            android:textAlignment="center"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exerciseEditText"
            android:layout_weight="1"/>

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tableRow3"
        android:gravity="center">

        <Button
            android:id="@+id/addExerDialogOK"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_weight="2"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/addExerDialogCancel"
            android:layout_weight="2"/>
    </TableRow>

</RelativeLayout>