<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingTop="@dimen/padding_top">

    <TextView
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/insertTitle"
        android:paddingRight="@dimen/padding_right"
        android:paddingLeft="@dimen/padding_left"
        android:textSize="24dp"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text"
        android:gravity="center"
        android:id="@+id/tableRow">

        <EditText
            android:paddingRight="@dimen/padding_right"
            android:paddingLeft="@dimen/padding_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trainingTitleEditText"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:layout_below="@+id/tableRow">

        <Button
            android:id="@+id/saveTraining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_weight="2"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancelSaveButton"
            android:layout_weight="2"/>
    </TableRow>

</RelativeLayout>